kubernetes/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes --volumes=hostPath
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes --volumes=hostPath
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/utfpr-chatbot-net: "true"
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: admin@utfpr-chatbot.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: utfpr_chatbot
          image: aurelixv/pgadmin:latest
          name: pgadmin
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /pgadmin4/servers.json
              name: pgadmin-hostpath0
            - mountPath: /root/.pgadmin
              name: pgadmin-hostpath1
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /Users/aurelius/Documents/TCC - Chatbot UTFPR/dev/pgadmin/servers.json
          name: pgadmin-hostpath0
        - hostPath:
            path: /Users/aurelius/Documents/TCC - Chatbot UTFPR/dev/pgadmin/pgpass
          name: pgadmin-hostpath1
status: {}
