kubernetes/rasa-actions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-prod.yml -o kubernetes
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: rasa-actions
  name: rasa-actions
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rasa-actions
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-prod.yml -o kubernetes
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/utfpr-chatbot-net: "true"
        io.kompose.service: rasa-actions
    spec:
      containers:
        - args:
            - start
            - -vv
            - -p
            - "5055"
            - --actions
            - actions
          image: utfprchatbot.azurecr.io/rasa-actions-prod:latest
          livenessProbe:
            exec:
              command:
                - curl
                - --fail
                - http://0.0.0.0:5055/health
            failureThreshold: 5
            periodSeconds: 1
            timeoutSeconds: 5
          name: rasa-actions
          ports:
            - containerPort: 5055
          resources: {}
      restartPolicy: Always
status: {}
