kubernetes/rasa-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-prod.yml -o kubernetes
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: rasa-server
  name: rasa-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rasa-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-prod.yml -o kubernetes
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/utfpr-chatbot-net: "true"
        io.kompose.service: rasa-server
    spec:
      containers:
        - args:
            - run
            - -vv
            - --model
            - models/nlu_utfpr_chatbot.tar.gz
            - --credentials
            - credentials.yml
            - -p
            - "5005"
          image: utfprchatbot.azurecr.io/rasa-server-prod:latest
          livenessProbe:
            exec:
              command:
                - curl
                - --fail
                - http://0.0.0.0:5005/
            failureThreshold: 5
            periodSeconds: 60
            timeoutSeconds: 5
          name: rasa-server
          ports:
            - containerPort: 5005
          resources: {}
          workingDir: /app
      restartPolicy: Always
status: {}
