kubernetes/pgadmin-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-prod.yml -o kubernetes
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin-tcp
  name: pgadmin-tcp
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
  type: LoadBalancer
status:
  loadBalancer: {}
